--- a/style.css
+++ b/style.css
@@ -68,8 +68,8 @@ section{
     position: absolute;
     width: 900px;
     height: 80px;
-    left: 200px;
-    top: 1700px;
+    left: 230px;
+    top: 1650px;
     border-radius: 30px;
 }
 .button{
@@ -80,8 +80,8 @@ section{
     height: 40px;
     color: white;
     position: absolute;
-    left: 700px;
-    top: 73px;
+    left: 600px;
+    top: 70px;
     font-size: 30px;
     padding: 7px 8px;
 }
@@ -97,23 +97,48 @@ section{
 .stay{
     font-size: 40px;
     position: absolute;
-    left: 650px;
-    top: 2000px;
+    left: 550px;
+    top: 1785px;
     font-style: normal;
     font-weight: 700px;
     color: #696871;
 }
 .gmail{
     position: absolute;
-    left: 570px;
-    top: 2100px;
+    left: 480px;
+    top: 1850px;
     font-style: normal;
     font-weight: bold;
     font-size: 36px;
     color: #363958;
 }
-.icon{
+.top-banner{
+    background-image: url(images/top-banner.png);
+    background-repeat: no-repeat;
+}
+.about-area{
+    background-image: url(images/dream-bg.png);
+    background-repeat: no-repeat;
+    float: right;
+}
+.img1{
     position: absolute;
-    left: 585px;
-    top: 2225px;
+    width: 40px;
+    height: 40px;
+    left: 600px;
+    top: 1950px;
+}
+.img2{          
+    position: absolute;
+    width: 40px;
+    height: 40px;
+    left: 650px;
+    top: 1950px;
+}
+.img3{
+    position: absolute;
+    width: 36.04px;
+    height: 36px;
+    left: 700px;
+    top: 1950px;
 }
